--- a/config/database.yml
+++ b/config/database.yml
@@ -3,6 +3,7 @@ default: &default
   encoding: unicode
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   username: janus
+  host: <%= ENV.fetch("DATABASE_HOST") { "127.0.0.1" } %>
 
 development:
   <<: *default
